<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="#ffffff"
    tools:context=".actividades.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@color/blanco"
        android:subtitleTextColor="@color/blanco"
        app:titleTextColor="@color/blanco"
        app:subtitleTextColor="@color/blanco"
        app:popupTheme="@style/AppTheme.PopupOverlay" >

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/wsPrincipal" />

            <EditText
                android:id="@+id/edtxt_settings_wsprincipal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:hint="@string/wsPrincipal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/wsSecundario" />

            <EditText
                android:id="@+id/edtxt_settings_wssecundario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:hint="@string/wsSecundario" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/wsImpresion" />

            <EditText
                android:id="@+id/edtxt_settings_wsimpresion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:hint="@string/wsImpresion" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/secretWord" />

            <EditText
                android:id="@+id/edtxt_settings_secretword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:hint="@string/secretWord" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/passWord" />

            <EditText
                android:id="@+id/edtxt_settings_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:hint="@string/passWord" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/proyecto" />

            <CheckBox android:id="@+id/checkbox_settings_inventario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/inventario_linea" />

            <Spinner
                android:id="@+id/spinner_settings_almacen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_dropdown_normal"
                android:layout_marginBottom="15dp"/>

            <ImageButton
                android:id="@+id/btn_settings_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/floppy"
                android:theme="@style/btnBlue"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
