<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_salidas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="#ffffff"
    tools:context=".actividades.SalidasActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@color/blanco"
        android:subtitleTextColor="@color/blanco"
        app:titleTextColor="@color/blanco"
        app:subtitleTextColor="@color/blanco"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <LinearLayout
        android:id="@+id/linear_salidas_buscar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edtxt_salidas_remision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintRemision"
            android:inputType="number"
            android:imeOptions="actionSearch"/>

        <Button
            android:id="@+id/btn_salidas_buscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/search"
            android:visibility="visible"
            android:text="@string/btnBuscar"
            android:theme="@style/btnBuscar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_salidas_encontrado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_vertical_margin" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/lblRemision" />

            <TextView
                android:id="@+id/txt_salidas_remision"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="#dddddd"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_vertical_margin" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/lblPedido" />

            <TextView
                android:id="@+id/txt_salidas_pedido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="#dddddd"/>

        <TextView
            android:id="@+id/txt_salidas_guia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:text="@string/lblGuia"
            android:textColor="#ff0000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#010101"
                android:text="@string/lblProducto"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:layout_weight="3"
                >
            </TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#010101"
                android:text="@string/lblCantidad"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:layout_weight="1"
                android:gravity="center"
                >
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1" >

            <ListView
                android:id="@+id/lista_salidas_productos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/btn_salidas_escanear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/barcode"
                android:theme="@style/btnGreen"
                />

            <ImageButton
                android:id="@+id/btn_salidas_guardar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/floppy"
                android:theme="@style/btnBlue"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
