<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_entrada"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="#ffffff"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.proveedoradeclimas.sacalmacen.actividades.EntradaActivity" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@color/blanco"
        android:subtitleTextColor="@color/blanco"
        app:titleTextColor="@color/blanco"
        app:subtitleTextColor="@color/blanco"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <LinearLayout
        android:id="@+id/linear_entrada_buscar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edtxt_entrada_ordencompra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintOrdenCompra"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:imeOptions="actionSearch"/>

        <Button
            android:id="@+id/btn_entrada_buscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/search"
            android:visibility="visible"
            android:text="@string/btnBuscar"
            android:theme="@style/btnBuscar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_entrada_encontrado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_vertical_margin" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/lblOrdenCompra" />

            <TextView
                android:id="@+id/txt_entrada_ordencompra"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="#dddddd"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_vertical_margin" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/lblPedido" />

            <TextView
                android:id="@+id/txt_entrada_pedido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="#dddddd"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#010101"
                android:text="@string/lblProducto"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:layout_weight="3"
                >
            </TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#010101"
                android:text="@string/lblCantidad"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:layout_weight="1"
                android:gravity="center"
                >
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"

            >
            <!-- Lista Productos -->
            <ListView
                android:id="@+id/lista_entrada_productos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/btn_entrada_escanear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/barcode"
                android:theme="@style/btnGreen"
                />

            <ImageButton
                android:id="@+id/btn_entrada_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/arrow_right"
                android:theme="@style/btnPurple"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_entrada_extras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hintRemision" />

        <EditText
            android:id="@+id/edtxt_entradas_remision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintRemision"
            android:inputType="number|textNoSuggestions"
            android:imeOptions="actionNext"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hintFolio" />

        <EditText
            android:id="@+id/edtxt_entradas_folio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintFolio"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:imeOptions="actionNext"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hintPlacas" />

        <EditText
            android:id="@+id/edtxt_entradas_placas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintPlacas"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:imeOptions="actionDone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:weightSum="2">

            <ImageButton
                android:id="@+id/btn_entrada_guardar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="32dp"
                android:paddingLeft="32dp"
                android:layout_gravity="right"
                android:src="@drawable/floppy"
                android:theme="@style/btnBlue"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>